infra/k8s/environments/gcp/production/public/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bos-gateway
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "bos-gateway-public-euw3"
    networking.gke.io/managed-certificates: "bos-gateway"
    networking.gke.io/v1beta1.FrontendConfig: "bos-gateway"
spec:
  rules:
    - host: portal-temp.calimero.network
      http:
        paths:
          - pathType: ImplementationSpecific
            path: /*
            backend:
              service:
                name: bos-gateway
                port:
                  number: 3000
